# embedded-software

./: .gitignore  .travis.yml  LICENSE  README.md  _c_c3200_2hal__general_8h.html  _c_c3200_2hal__general_8h.js  _c_c3200_2hal__general_8h__incl.map  _c_c3200_2hal__general_8h__incl.md5  _c_c3200_2hal__general_8h_source.html  _c_c3200_2hal__socket_8h.html  _c_c3200_2hal__socket_8h.js  _c_c3200_2hal__socket_8h__incl.map  _c_c3200_2hal__socket_8h__incl.md5  _c_c3200_2hal__socket_8h_source.html  _c_c3200_2hal__spi_8c.html  _c_c3200_2hal__spi_8c.js  _c_c3200_2hal__spi_8c__incl.map  _c_c3200_2hal__spi_8c__incl.md5  _c_c3200_2hal__spi_8c_a6f09c62863ceecf6a50f6b669df5614c_cgraph.map  _c_c3200_2hal__spi_8c_a6f09c62863ceecf6a50f6b669df5614c_cgraph.md5  _c_c3200_2hal__spi_8c_a6f09c62863ceecf6a50f6b669df5614c_icgraph.map  _c_c3200_2hal__spi_8c_a6f09c62863ceecf6a50f6b669df5614c_icgraph.md5  _c_c3200_2hal__spi_8h.html  _c_c3200_2hal__spi_8h.js  _c_c3200_2hal__spi_8h__dep__incl.map  _c_c3200_2hal__spi_8h__dep__incl.md5  _c_c3200_2hal__spi_8h__incl.map  _c_c3200_2hal__spi_8h__incl.md5  _c_c3200_2hal__spi_8h_source.html  _c_c3200_2hal__timing_8c.html  _c_c3200_2hal__timing_8c.js  _c_c3200_2hal__timing_8c__incl.map  _c_c3200_2hal__timing_8c__incl.md5  _c_c3200_2hal__timing_8c_aaf13d809db0ab35d0fcadbe9b6ec400b_icgraph.map  _c_c3200_2hal__timing_8h.html  _c_c3200_2hal__timing_8h.js  _c_c3200_2hal__timing_8h_source.html  _c_c3200_2hal__uart_8c.html  _c_c3200_2hal__uart_8c.js  _c_c3200_2hal__uart_8c__incl.map  (+3003 more)
documentation/: Doxyfile  Doxyfile_Graphviz  ccs_setup.h  hal_doc.h  hal_msp430f5529.h  (+3 more)
(+965 files in other folders)
